--- a/package.json
+++ b/package.json
@@ -6,21 +6,48 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "@nextui-org/switch": "^2.0.33",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
+    "@svgr/webpack": "^8.1.0",
+    "classnames": "^2.5.1",
+    "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.3.24",
+    "gray-matter": "^4.0.3",
+    "hamburger-react": "^2.5.1",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.9",
+    "lucide-react": "^0.427.0",
+    "next": "14.2.5",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.3.0",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "reading-time": "^1.5.0",
+    "rehype-highlight": "^7.0.0",
+    "sugar-high": "^0.7.0",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "20.14.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{tsx,css,md}": "prettier --write"
   }
 }
