--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/theme": "^2.2.9",
     "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.3.24",
