--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "reading-time": "^1.5.0",
     "rehype-highlight": "^7.0.0",
